parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program_eval
Rule 1     program_eval -> program
Rule 2     program -> statements
Rule 3     statements -> statements statement
Rule 4     statements -> statement
Rule 5     statement -> ID ASSIGN STRING
Rule 6     statement -> ID ASSIGN expression
Rule 7     statement -> ID ASSIGN CALL ID LPAREN args RPAREN
Rule 8     statement -> RETURN LPAREN expression RPAREN
Rule 9     statement -> ID ASSIGN RETURN LPAREN expression RPAREN
Rule 10    statement -> FUNC ID LPAREN params RPAREN COLON statements maybe_end
Rule 11    params -> params_list
Rule 12    params -> empty
Rule 13    params_list -> ID
Rule 14    params_list -> params_list COMMA ID
Rule 15    statement -> CALL ID LPAREN args RPAREN
Rule 16    args -> args_list
Rule 17    args -> empty
Rule 18    args_list -> expression
Rule 19    args_list -> args_list COMMA expression
Rule 20    statement -> PRINT LPAREN STRING RPAREN
Rule 21    statement -> PRINT LPAREN expression RPAREN
Rule 22    statement -> PRINT LPAREN STRING expression RPAREN
Rule 23    statement -> ID PLUS_ASSIGN expression
Rule 24    statement -> ID MINUS_ASSIGN expression
Rule 25    statement -> ID TIMES_ASSIGN expression
Rule 26    statement -> ID DIVIDE_ASSIGN expression
Rule 27    statement -> ID MOD_ASSIGN expression
Rule 28    statement -> expression
Rule 29    expression -> MINUS expression
Rule 30    expression -> expression PLUS expression
Rule 31    expression -> expression MINUS expression
Rule 32    expression -> expression TIMES expression
Rule 33    expression -> expression DIVIDE expression
Rule 34    expression -> expression EXPO expression
Rule 35    expression -> expression MOD expression
Rule 36    expression -> expression LESS_THAN expression
Rule 37    expression -> expression GREATER_THAN expression
Rule 38    expression -> expression GREATER_EQUAL expression
Rule 39    expression -> expression LESS_EQUAL expression
Rule 40    expression -> expression EQUALS expression
Rule 41    expression -> expression AND expression
Rule 42    expression -> expression OR expression
Rule 43    expression -> NOT expression
Rule 44    expression -> TRUE
Rule 45    expression -> FALSE
Rule 46    expression -> LPAREN expression RPAREN
Rule 47    expression -> INTEGER
Rule 48    expression -> FLOAT
Rule 49    expression -> ID
Rule 50    expression -> ID INCREMENT
Rule 51    expression -> INCREMENT ID
Rule 52    expression -> ID DECREMENT
Rule 53    statement -> IF expression COLON statements maybe_end
Rule 54    statement -> IF expression COLON statements ELSE COLON statements maybe_end
Rule 55    statement -> IF expression COLON statements elif_list ELSE COLON statements maybe_end
Rule 56    elif_list -> ELIF expression COLON statements elif_list
Rule 57    elif_list -> empty
Rule 58    statement -> FOR ID ASSIGN expression TO expression statements maybe_end
Rule 59    statement -> DO statements WHILE expression maybe_end
Rule 60    statement -> WHILE expression statements maybe_end
Rule 61    expression -> expression QUEST expression COLON expression
Rule 62    maybe_end -> <empty>
Rule 63    maybe_end -> END
Rule 64    empty -> <empty>

Terminals, with rules where they appear

AND                  : 41
ASSIGN               : 5 6 7 9 58
CALL                 : 7 15
COLON                : 10 53 54 54 55 55 56 61
COMMA                : 14 19
DECREMENT            : 52
DIVIDE               : 33
DIVIDE_ASSIGN        : 26
DO                   : 59
ELIF                 : 56
ELSE                 : 54 55
END                  : 63
EQUALS               : 40
EXPO                 : 34
FALSE                : 45
FLOAT                : 48
FOR                  : 58
FUNC                 : 10
GREATER_EQUAL        : 38
GREATER_THAN         : 37
ID                   : 5 6 7 7 9 10 13 14 15 23 24 25 26 27 49 50 51 52 58
IF                   : 53 54 55
INCREMENT            : 50 51
INTEGER              : 47
LESS_EQUAL           : 39
LESS_THAN            : 36
LPAREN               : 7 8 9 10 15 20 21 22 46
MINUS                : 29 31
MINUS_ASSIGN         : 24
MOD                  : 35
MOD_ASSIGN           : 27
NOT                  : 43
OR                   : 42
PLUS                 : 30
PLUS_ASSIGN          : 23
PRINT                : 20 21 22
QUEST                : 61
RETURN               : 8 9
RPAREN               : 7 8 9 10 15 20 21 22 46
STRING               : 5 20 22
TIMES                : 32
TIMES_ASSIGN         : 25
TO                   : 58
TRUE                 : 44
WHILE                : 59 60
error                : 

Nonterminals, with rules where they appear

args                 : 7 15
args_list            : 16 19
elif_list            : 55 56
empty                : 12 17 57
expression           : 6 8 9 18 19 21 22 23 24 25 26 27 28 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 46 53 54 55 56 58 58 59 60 61 61 61
maybe_end            : 10 53 54 55 58 59 60
params               : 10
params_list          : 11 14
program              : 1
program_eval         : 0
statement            : 3 4
statements           : 2 3 10 53 54 54 55 55 56 58 59 60

Parsing method: LALR

state 0

    (0) S' -> . program_eval
    (1) program_eval -> . program
    (2) program -> . statements
    (3) statements -> . statements statement
    (4) statements -> . statement
    (5) statement -> . ID ASSIGN STRING
    (6) statement -> . ID ASSIGN expression
    (7) statement -> . ID ASSIGN CALL ID LPAREN args RPAREN
    (8) statement -> . RETURN LPAREN expression RPAREN
    (9) statement -> . ID ASSIGN RETURN LPAREN expression RPAREN
    (10) statement -> . FUNC ID LPAREN params RPAREN COLON statements maybe_end
    (15) statement -> . CALL ID LPAREN args RPAREN
    (20) statement -> . PRINT LPAREN STRING RPAREN
    (21) statement -> . PRINT LPAREN expression RPAREN
    (22) statement -> . PRINT LPAREN STRING expression RPAREN
    (23) statement -> . ID PLUS_ASSIGN expression
    (24) statement -> . ID MINUS_ASSIGN expression
    (25) statement -> . ID TIMES_ASSIGN expression
    (26) statement -> . ID DIVIDE_ASSIGN expression
    (27) statement -> . ID MOD_ASSIGN expression
    (28) statement -> . expression
    (53) statement -> . IF expression COLON statements maybe_end
    (54) statement -> . IF expression COLON statements ELSE COLON statements maybe_end
    (55) statement -> . IF expression COLON statements elif_list ELSE COLON statements maybe_end
    (58) statement -> . FOR ID ASSIGN expression TO expression statements maybe_end
    (59) statement -> . DO statements WHILE expression maybe_end
    (60) statement -> . WHILE expression statements maybe_end
    (29) expression -> . MINUS expression
    (30) expression -> . expression PLUS expression
    (31) expression -> . expression MINUS expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression DIVIDE expression
    (34) expression -> . expression EXPO expression
    (35) expression -> . expression MOD expression
    (36) expression -> . expression LESS_THAN expression
    (37) expression -> . expression GREATER_THAN expression
    (38) expression -> . expression GREATER_EQUAL expression
    (39) expression -> . expression LESS_EQUAL expression
    (40) expression -> . expression EQUALS expression
    (41) expression -> . expression AND expression
    (42) expression -> . expression OR expression
    (43) expression -> . NOT expression
    (44) expression -> . TRUE
    (45) expression -> . FALSE
    (46) expression -> . LPAREN expression RPAREN
    (47) expression -> . INTEGER
    (48) expression -> . FLOAT
    (49) expression -> . ID
    (50) expression -> . ID INCREMENT
    (51) expression -> . INCREMENT ID
    (52) expression -> . ID DECREMENT
    (61) expression -> . expression QUEST expression COLON expression

    ID              shift and go to state 5
    RETURN          shift and go to state 9
    FUNC            shift and go to state 10
    CALL            shift and go to state 7
    PRINT           shift and go to state 11
    IF              shift and go to state 12
    FOR             shift and go to state 13
    DO              shift and go to state 14
    WHILE           shift and go to state 15
    MINUS           shift and go to state 16
    NOT             shift and go to state 17
    TRUE            shift and go to state 18
    FALSE           shift and go to state 19
    LPAREN          shift and go to state 8
    INTEGER         shift and go to state 20
    FLOAT           shift and go to state 21
    INCREMENT       shift and go to state 22

    program_eval                   shift and go to state 1
    program                        shift and go to state 2
    statements                     shift and go to state 3
    statement                      shift and go to state 4
    expression                     shift and go to state 6

state 1

    (0) S' -> program_eval .



state 2

    (1) program_eval -> program .

    $end            reduce using rule 1 (program_eval -> program .)


state 3

    (2) program -> statements .
    (3) statements -> statements . statement
    (5) statement -> . ID ASSIGN STRING
    (6) statement -> . ID ASSIGN expression
    (7) statement -> . ID ASSIGN CALL ID LPAREN args RPAREN
    (8) statement -> . RETURN LPAREN expression RPAREN
    (9) statement -> . ID ASSIGN RETURN LPAREN expression RPAREN
    (10) statement -> . FUNC ID LPAREN params RPAREN COLON statements maybe_end
    (15) statement -> . CALL ID LPAREN args RPAREN
    (20) statement -> . PRINT LPAREN STRING RPAREN
    (21) statement -> . PRINT LPAREN expression RPAREN
    (22) statement -> . PRINT LPAREN STRING expression RPAREN
    (23) statement -> . ID PLUS_ASSIGN expression
    (24) statement -> . ID MINUS_ASSIGN expression
    (25) statement -> . ID TIMES_ASSIGN expression
    (26) statement -> . ID DIVIDE_ASSIGN expression
    (27) statement -> . ID MOD_ASSIGN expression
    (28) statement -> . expression
    (53) statement -> . IF expression COLON statements maybe_end
    (54) statement -> . IF expression COLON statements ELSE COLON statements maybe_end
    (55) statement -> . IF expression COLON statements elif_list ELSE COLON statements maybe_end
    (58) statement -> . FOR ID ASSIGN expression TO expression statements maybe_end
    (59) statement -> . DO statements WHILE expression maybe_end
    (60) statement -> . WHILE expression statements maybe_end
    (29) expression -> . MINUS expression
    (30) expression -> . expression PLUS expression
    (31) expression -> . expression MINUS expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression DIVIDE expression
    (34) expression -> . expression EXPO expression
    (35) expression -> . expression MOD expression
    (36) expression -> . expression LESS_THAN expression
    (37) expression -> . expression GREATER_THAN expression
    (38) expression -> . expression GREATER_EQUAL expression
    (39) expression -> . expression LESS_EQUAL expression
    (40) expression -> . expression EQUALS expression
    (41) expression -> . expression AND expression
    (42) expression -> . expression OR expression
    (43) expression -> . NOT expression
    (44) expression -> . TRUE
    (45) expression -> . FALSE
    (46) expression -> . LPAREN expression RPAREN
    (47) expression -> . INTEGER
    (48) expression -> . FLOAT
    (49) expression -> . ID
    (50) expression -> . ID INCREMENT
    (51) expression -> . INCREMENT ID
    (52) expression -> . ID DECREMENT
    (61) expression -> . expression QUEST expression COLON expression

    $end            reduce using rule 2 (program -> statements .)
    ID              shift and go to state 5
    RETURN          shift and go to state 9
    FUNC            shift and go to state 10
    CALL            shift and go to state 7
    PRINT           shift and go to state 11
    IF              shift and go to state 12
    FOR             shift and go to state 13
    DO              shift and go to state 14
    WHILE           shift and go to state 15
    MINUS           shift and go to state 16
    NOT             shift and go to state 17
    TRUE            shift and go to state 18
    FALSE           shift and go to state 19
    LPAREN          shift and go to state 8
    INTEGER         shift and go to state 20
    FLOAT           shift and go to state 21
    INCREMENT       shift and go to state 22

    statement                      shift and go to state 23
    expression                     shift and go to state 6

state 4

    (4) statements -> statement .

    ID              reduce using rule 4 (statements -> statement .)
    RETURN          reduce using rule 4 (statements -> statement .)
    FUNC            reduce using rule 4 (statements -> statement .)
    CALL            reduce using rule 4 (statements -> statement .)
    PRINT           reduce using rule 4 (statements -> statement .)
    IF              reduce using rule 4 (statements -> statement .)
    FOR             reduce using rule 4 (statements -> statement .)
    DO              reduce using rule 4 (statements -> statement .)
    WHILE           reduce using rule 4 (statements -> statement .)
    MINUS           reduce using rule 4 (statements -> statement .)
    NOT             reduce using rule 4 (statements -> statement .)
    TRUE            reduce using rule 4 (statements -> statement .)
    FALSE           reduce using rule 4 (statements -> statement .)
    LPAREN          reduce using rule 4 (statements -> statement .)
    INTEGER         reduce using rule 4 (statements -> statement .)
    FLOAT           reduce using rule 4 (statements -> statement .)
    INCREMENT       reduce using rule 4 (statements -> statement .)
    $end            reduce using rule 4 (statements -> statement .)
    END             reduce using rule 4 (statements -> statement .)
    ELSE            reduce using rule 4 (statements -> statement .)
    ELIF            reduce using rule 4 (statements -> statement .)


state 5

    (5) statement -> ID . ASSIGN STRING
    (6) statement -> ID . ASSIGN expression
    (7) statement -> ID . ASSIGN CALL ID LPAREN args RPAREN
    (9) statement -> ID . ASSIGN RETURN LPAREN expression RPAREN
    (23) statement -> ID . PLUS_ASSIGN expression
    (24) statement -> ID . MINUS_ASSIGN expression
    (25) statement -> ID . TIMES_ASSIGN expression
    (26) statement -> ID . DIVIDE_ASSIGN expression
    (27) statement -> ID . MOD_ASSIGN expression
    (49) expression -> ID .
    (50) expression -> ID . INCREMENT
    (52) expression -> ID . DECREMENT

  ! shift/reduce conflict for INCREMENT resolved as shift
    ASSIGN          shift and go to state 24
    PLUS_ASSIGN     shift and go to state 25
    MINUS_ASSIGN    shift and go to state 26
    TIMES_ASSIGN    shift and go to state 27
    DIVIDE_ASSIGN   shift and go to state 28
    MOD_ASSIGN      shift and go to state 29
    PLUS            reduce using rule 49 (expression -> ID .)
    MINUS           reduce using rule 49 (expression -> ID .)
    TIMES           reduce using rule 49 (expression -> ID .)
    DIVIDE          reduce using rule 49 (expression -> ID .)
    EXPO            reduce using rule 49 (expression -> ID .)
    MOD             reduce using rule 49 (expression -> ID .)
    LESS_THAN       reduce using rule 49 (expression -> ID .)
    GREATER_THAN    reduce using rule 49 (expression -> ID .)
    GREATER_EQUAL   reduce using rule 49 (expression -> ID .)
    LESS_EQUAL      reduce using rule 49 (expression -> ID .)
    EQUALS          reduce using rule 49 (expression -> ID .)
    AND             reduce using rule 49 (expression -> ID .)
    OR              reduce using rule 49 (expression -> ID .)
    QUEST           reduce using rule 49 (expression -> ID .)
    ID              reduce using rule 49 (expression -> ID .)
    RETURN          reduce using rule 49 (expression -> ID .)
    FUNC            reduce using rule 49 (expression -> ID .)
    CALL            reduce using rule 49 (expression -> ID .)
    PRINT           reduce using rule 49 (expression -> ID .)
    IF              reduce using rule 49 (expression -> ID .)
    FOR             reduce using rule 49 (expression -> ID .)
    DO              reduce using rule 49 (expression -> ID .)
    WHILE           reduce using rule 49 (expression -> ID .)
    NOT             reduce using rule 49 (expression -> ID .)
    TRUE            reduce using rule 49 (expression -> ID .)
    FALSE           reduce using rule 49 (expression -> ID .)
    LPAREN          reduce using rule 49 (expression -> ID .)
    INTEGER         reduce using rule 49 (expression -> ID .)
    FLOAT           reduce using rule 49 (expression -> ID .)
    $end            reduce using rule 49 (expression -> ID .)
    END             reduce using rule 49 (expression -> ID .)
    ELSE            reduce using rule 49 (expression -> ID .)
    ELIF            reduce using rule 49 (expression -> ID .)
    INCREMENT       shift and go to state 30
    DECREMENT       shift and go to state 31

  ! INCREMENT       [ reduce using rule 49 (expression -> ID .) ]


state 6

    (28) statement -> expression .
    (30) expression -> expression . PLUS expression
    (31) expression -> expression . MINUS expression
    (32) expression -> expression . TIMES expression
    (33) expression -> expression . DIVIDE expression
    (34) expression -> expression . EXPO expression
    (35) expression -> expression . MOD expression
    (36) expression -> expression . LESS_THAN expression
    (37) expression -> expression . GREATER_THAN expression
    (38) expression -> expression . GREATER_EQUAL expression
    (39) expression -> expression . LESS_EQUAL expression
    (40) expression -> expression . EQUALS expression
    (41) expression -> expression . AND expression
    (42) expression -> expression . OR expression
    (61) expression -> expression . QUEST expression COLON expression

  ! shift/reduce conflict for MINUS resolved as shift
    ID              reduce using rule 28 (statement -> expression .)
    RETURN          reduce using rule 28 (statement -> expression .)
    FUNC            reduce using rule 28 (statement -> expression .)
    CALL            reduce using rule 28 (statement -> expression .)
    PRINT           reduce using rule 28 (statement -> expression .)
    IF              reduce using rule 28 (statement -> expression .)
    FOR             reduce using rule 28 (statement -> expression .)
    DO              reduce using rule 28 (statement -> expression .)
    WHILE           reduce using rule 28 (statement -> expression .)
    NOT             reduce using rule 28 (statement -> expression .)
    TRUE            reduce using rule 28 (statement -> expression .)
    FALSE           reduce using rule 28 (statement -> expression .)
    LPAREN          reduce using rule 28 (statement -> expression .)
    INTEGER         reduce using rule 28 (statement -> expression .)
    FLOAT           reduce using rule 28 (statement -> expression .)
    INCREMENT       reduce using rule 28 (statement -> expression .)
    $end            reduce using rule 28 (statement -> expression .)
    END             reduce using rule 28 (statement -> expression .)
    ELSE            reduce using rule 28 (statement -> expression .)
    ELIF            reduce using rule 28 (statement -> expression .)
    PLUS            shift and go to state 32
    MINUS           shift and go to state 33
    TIMES           shift and go to state 34
    DIVIDE          shift and go to state 35
    EXPO            shift and go to state 36
    MOD             shift and go to state 37
    LESS_THAN       shift and go to state 38
    GREATER_THAN    shift and go to state 39
    GREATER_EQUAL   shift and go to state 40
    LESS_EQUAL      shift and go to state 41
    EQUALS          shift and go to state 42
    AND             shift and go to state 43
    OR              shift and go to state 44
    QUEST           shift and go to state 45

  ! MINUS           [ reduce using rule 28 (statement -> expression .) ]


state 7

    (15) statement -> CALL . ID LPAREN args RPAREN

    ID              shift and go to state 46


state 8

    (46) expression -> LPAREN . expression RPAREN
    (29) expression -> . MINUS expression
    (30) expression -> . expression PLUS expression
    (31) expression -> . expression MINUS expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression DIVIDE expression
    (34) expression -> . expression EXPO expression
    (35) expression -> . expression MOD expression
    (36) expression -> . expression LESS_THAN expression
    (37) expression -> . expression GREATER_THAN expression
    (38) expression -> . expression GREATER_EQUAL expression
    (39) expression -> . expression LESS_EQUAL expression
    (40) expression -> . expression EQUALS expression
    (41) expression -> . expression AND expression
    (42) expression -> . expression OR expression
    (43) expression -> . NOT expression
    (44) expression -> . TRUE
    (45) expression -> . FALSE
    (46) expression -> . LPAREN expression RPAREN
    (47) expression -> . INTEGER
    (48) expression -> . FLOAT
    (49) expression -> . ID
    (50) expression -> . ID INCREMENT
    (51) expression -> . INCREMENT ID
    (52) expression -> . ID DECREMENT
    (61) expression -> . expression QUEST expression COLON expression

    MINUS           shift and go to state 16
    NOT             shift and go to state 17
    TRUE            shift and go to state 18
    FALSE           shift and go to state 19
    LPAREN          shift and go to state 8
    INTEGER         shift and go to state 20
    FLOAT           shift and go to state 21
    ID              shift and go to state 48
    INCREMENT       shift and go to state 22

    expression                     shift and go to state 47

state 9

    (8) statement -> RETURN . LPAREN expression RPAREN

    LPAREN          shift and go to state 49


state 10

    (10) statement -> FUNC . ID LPAREN params RPAREN COLON statements maybe_end

    ID              shift and go to state 50


state 11

    (20) statement -> PRINT . LPAREN STRING RPAREN
    (21) statement -> PRINT . LPAREN expression RPAREN
    (22) statement -> PRINT . LPAREN STRING expression RPAREN

    LPAREN          shift and go to state 51


state 12

    (53) statement -> IF . expression COLON statements maybe_end
    (54) statement -> IF . expression COLON statements ELSE COLON statements maybe_end
    (55) statement -> IF . expression COLON statements elif_list ELSE COLON statements maybe_end
    (29) expression -> . MINUS expression
    (30) expression -> . expression PLUS expression
    (31) expression -> . expression MINUS expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression DIVIDE expression
    (34) expression -> . expression EXPO expression
    (35) expression -> . expression MOD expression
    (36) expression -> . expression LESS_THAN expression
    (37) expression -> . expression GREATER_THAN expression
    (38) expression -> . expression GREATER_EQUAL expression
    (39) expression -> . expression LESS_EQUAL expression
    (40) expression -> . expression EQUALS expression
    (41) expression -> . expression AND expression
    (42) expression -> . expression OR expression
    (43) expression -> . NOT expression
    (44) expression -> . TRUE
    (45) expression -> . FALSE
    (46) expression -> . LPAREN expression RPAREN
    (47) expression -> . INTEGER
    (48) expression -> . FLOAT
    (49) expression -> . ID
    (50) expression -> . ID INCREMENT
    (51) expression -> . INCREMENT ID
    (52) expression -> . ID DECREMENT
    (61) expression -> . expression QUEST expression COLON expression

    MINUS           shift and go to state 16
    NOT             shift and go to state 17
    TRUE            shift and go to state 18
    FALSE           shift and go to state 19
    LPAREN          shift and go to state 8
    INTEGER         shift and go to state 20
    FLOAT           shift and go to state 21
    ID              shift and go to state 48
    INCREMENT       shift and go to state 22

    expression                     shift and go to state 52

state 13

    (58) statement -> FOR . ID ASSIGN expression TO expression statements maybe_end

    ID              shift and go to state 53


state 14

    (59) statement -> DO . statements WHILE expression maybe_end
    (3) statements -> . statements statement
    (4) statements -> . statement
    (5) statement -> . ID ASSIGN STRING
    (6) statement -> . ID ASSIGN expression
    (7) statement -> . ID ASSIGN CALL ID LPAREN args RPAREN
    (8) statement -> . RETURN LPAREN expression RPAREN
    (9) statement -> . ID ASSIGN RETURN LPAREN expression RPAREN
    (10) statement -> . FUNC ID LPAREN params RPAREN COLON statements maybe_end
    (15) statement -> . CALL ID LPAREN args RPAREN
    (20) statement -> . PRINT LPAREN STRING RPAREN
    (21) statement -> . PRINT LPAREN expression RPAREN
    (22) statement -> . PRINT LPAREN STRING expression RPAREN
    (23) statement -> . ID PLUS_ASSIGN expression
    (24) statement -> . ID MINUS_ASSIGN expression
    (25) statement -> . ID TIMES_ASSIGN expression
    (26) statement -> . ID DIVIDE_ASSIGN expression
    (27) statement -> . ID MOD_ASSIGN expression
    (28) statement -> . expression
    (53) statement -> . IF expression COLON statements maybe_end
    (54) statement -> . IF expression COLON statements ELSE COLON statements maybe_end
    (55) statement -> . IF expression COLON statements elif_list ELSE COLON statements maybe_end
    (58) statement -> . FOR ID ASSIGN expression TO expression statements maybe_end
    (59) statement -> . DO statements WHILE expression maybe_end
    (60) statement -> . WHILE expression statements maybe_end
    (29) expression -> . MINUS expression
    (30) expression -> . expression PLUS expression
    (31) expression -> . expression MINUS expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression DIVIDE expression
    (34) expression -> . expression EXPO expression
    (35) expression -> . expression MOD expression
    (36) expression -> . expression LESS_THAN expression
    (37) expression -> . expression GREATER_THAN expression
    (38) expression -> . expression GREATER_EQUAL expression
    (39) expression -> . expression LESS_EQUAL expression
    (40) expression -> . expression EQUALS expression
    (41) expression -> . expression AND expression
    (42) expression -> . expression OR expression
    (43) expression -> . NOT expression
    (44) expression -> . TRUE
    (45) expression -> . FALSE
    (46) expression -> . LPAREN expression RPAREN
    (47) expression -> . INTEGER
    (48) expression -> . FLOAT
    (49) expression -> . ID
    (50) expression -> . ID INCREMENT
    (51) expression -> . INCREMENT ID
    (52) expression -> . ID DECREMENT
    (61) expression -> . expression QUEST expression COLON expression

    ID              shift and go to state 5
    RETURN          shift and go to state 9
    FUNC            shift and go to state 10
    CALL            shift and go to state 7
    PRINT           shift and go to state 11
    IF              shift and go to state 12
    FOR             shift and go to state 13
    DO              shift and go to state 14
    WHILE           shift and go to state 15
    MINUS           shift and go to state 16
    NOT             shift and go to state 17
    TRUE            shift and go to state 18
    FALSE           shift and go to state 19
    LPAREN          shift and go to state 8
    INTEGER         shift and go to state 20
    FLOAT           shift and go to state 21
    INCREMENT       shift and go to state 22

    statements                     shift and go to state 54
    expression                     shift and go to state 6
    statement                      shift and go to state 4

state 15

    (60) statement -> WHILE . expression statements maybe_end
    (29) expression -> . MINUS expression
    (30) expression -> . expression PLUS expression
    (31) expression -> . expression MINUS expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression DIVIDE expression
    (34) expression -> . expression EXPO expression
    (35) expression -> . expression MOD expression
    (36) expression -> . expression LESS_THAN expression
    (37) expression -> . expression GREATER_THAN expression
    (38) expression -> . expression GREATER_EQUAL expression
    (39) expression -> . expression LESS_EQUAL expression
    (40) expression -> . expression EQUALS expression
    (41) expression -> . expression AND expression
    (42) expression -> . expression OR expression
    (43) expression -> . NOT expression
    (44) expression -> . TRUE
    (45) expression -> . FALSE
    (46) expression -> . LPAREN expression RPAREN
    (47) expression -> . INTEGER
    (48) expression -> . FLOAT
    (49) expression -> . ID
    (50) expression -> . ID INCREMENT
    (51) expression -> . INCREMENT ID
    (52) expression -> . ID DECREMENT
    (61) expression -> . expression QUEST expression COLON expression

    MINUS           shift and go to state 16
    NOT             shift and go to state 17
    TRUE            shift and go to state 18
    FALSE           shift and go to state 19
    LPAREN          shift and go to state 8
    INTEGER         shift and go to state 20
    FLOAT           shift and go to state 21
    ID              shift and go to state 48
    INCREMENT       shift and go to state 22

    expression                     shift and go to state 55

state 16

    (29) expression -> MINUS . expression
    (29) expression -> . MINUS expression
    (30) expression -> . expression PLUS expression
    (31) expression -> . expression MINUS expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression DIVIDE expression
    (34) expression -> . expression EXPO expression
    (35) expression -> . expression MOD expression
    (36) expression -> . expression LESS_THAN expression
    (37) expression -> . expression GREATER_THAN expression
    (38) expression -> . expression GREATER_EQUAL expression
    (39) expression -> . expression LESS_EQUAL expression
    (40) expression -> . expression EQUALS expression
    (41) expression -> . expression AND expression
    (42) expression -> . expression OR expression
    (43) expression -> . NOT expression
    (44) expression -> . TRUE
    (45) expression -> . FALSE
    (46) expression -> . LPAREN expression RPAREN
    (47) expression -> . INTEGER
    (48) expression -> . FLOAT
    (49) expression -> . ID
    (50) expression -> . ID INCREMENT
    (51) expression -> . INCREMENT ID
    (52) expression -> . ID DECREMENT
    (61) expression -> . expression QUEST expression COLON expression

    MINUS           shift and go to state 16
    NOT             shift and go to state 17
    TRUE            shift and go to state 18
    FALSE           shift and go to state 19
    LPAREN          shift and go to state 8
    INTEGER         shift and go to state 20
    FLOAT           shift and go to state 21
    ID              shift and go to state 48
    INCREMENT       shift and go to state 22

    expression                     shift and go to state 56

state 17

    (43) expression -> NOT . expression
    (29) expression -> . MINUS expression
    (30) expression -> . expression PLUS expression
    (31) expression -> . expression MINUS expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression DIVIDE expression
    (34) expression -> . expression EXPO expression
    (35) expression -> . expression MOD expression
    (36) expression -> . expression LESS_THAN expression
    (37) expression -> . expression GREATER_THAN expression
    (38) expression -> . expression GREATER_EQUAL expression
    (39) expression -> . expression LESS_EQUAL expression
    (40) expression -> . expression EQUALS expression
    (41) expression -> . expression AND expression
    (42) expression -> . expression OR expression
    (43) expression -> . NOT expression
    (44) expression -> . TRUE
    (45) expression -> . FALSE
    (46) expression -> . LPAREN expression RPAREN
    (47) expression -> . INTEGER
    (48) expression -> . FLOAT
    (49) expression -> . ID
    (50) expression -> . ID INCREMENT
    (51) expression -> . INCREMENT ID
    (52) expression -> . ID DECREMENT
    (61) expression -> . expression QUEST expression COLON expression

    MINUS           shift and go to state 16
    NOT             shift and go to state 17
    TRUE            shift and go to state 18
    FALSE           shift and go to state 19
    LPAREN          shift and go to state 8
    INTEGER         shift and go to state 20
    FLOAT           shift and go to state 21
    ID              shift and go to state 48
    INCREMENT       shift and go to state 22

    expression                     shift and go to state 57

state 18

    (44) expression -> TRUE .

    PLUS            reduce using rule 44 (expression -> TRUE .)
    MINUS           reduce using rule 44 (expression -> TRUE .)
    TIMES           reduce using rule 44 (expression -> TRUE .)
    DIVIDE          reduce using rule 44 (expression -> TRUE .)
    EXPO            reduce using rule 44 (expression -> TRUE .)
    MOD             reduce using rule 44 (expression -> TRUE .)
    LESS_THAN       reduce using rule 44 (expression -> TRUE .)
    GREATER_THAN    reduce using rule 44 (expression -> TRUE .)
    GREATER_EQUAL   reduce using rule 44 (expression -> TRUE .)
    LESS_EQUAL      reduce using rule 44 (expression -> TRUE .)
    EQUALS          reduce using rule 44 (expression -> TRUE .)
    AND             reduce using rule 44 (expression -> TRUE .)
    OR              reduce using rule 44 (expression -> TRUE .)
    QUEST           reduce using rule 44 (expression -> TRUE .)
    ID              reduce using rule 44 (expression -> TRUE .)
    RETURN          reduce using rule 44 (expression -> TRUE .)
    FUNC            reduce using rule 44 (expression -> TRUE .)
    CALL            reduce using rule 44 (expression -> TRUE .)
    PRINT           reduce using rule 44 (expression -> TRUE .)
    IF              reduce using rule 44 (expression -> TRUE .)
    FOR             reduce using rule 44 (expression -> TRUE .)
    DO              reduce using rule 44 (expression -> TRUE .)
    WHILE           reduce using rule 44 (expression -> TRUE .)
    NOT             reduce using rule 44 (expression -> TRUE .)
    TRUE            reduce using rule 44 (expression -> TRUE .)
    FALSE           reduce using rule 44 (expression -> TRUE .)
    LPAREN          reduce using rule 44 (expression -> TRUE .)
    INTEGER         reduce using rule 44 (expression -> TRUE .)
    FLOAT           reduce using rule 44 (expression -> TRUE .)
    INCREMENT       reduce using rule 44 (expression -> TRUE .)
    $end            reduce using rule 44 (expression -> TRUE .)
    RPAREN          reduce using rule 44 (expression -> TRUE .)
    COLON           reduce using rule 44 (expression -> TRUE .)
    END             reduce using rule 44 (expression -> TRUE .)
    ELSE            reduce using rule 44 (expression -> TRUE .)
    ELIF            reduce using rule 44 (expression -> TRUE .)
    COMMA           reduce using rule 44 (expression -> TRUE .)
    TO              reduce using rule 44 (expression -> TRUE .)


state 19

    (45) expression -> FALSE .
